fix: styling issues on small mobiles

--- a/styles.css
+++ b/styles.css
@@ -39,8 +39,6 @@ ul {
   padding-top: 60px;
 
   display: flex;
-  justify-content: center;
-  flex-direction: column;
 }
 
 .content {
@@ -48,12 +46,20 @@ ul {
   margin-top: -10%;
 }
 
+.content p + p {
+  margin-top: 32px;
+}
+
 .h1 {
   font-size: 2em;
   font-weight: bold;
 }
 
-
+@media screen and (max-width: 360px) {
+  .page {
+    padding: 12px 18px;
+  }
+}
 
 @media screen and (min-width: 768px) {
 
@@ -67,15 +73,15 @@ ul {
     max-width: 640px;
   }
 
-
-  .content p + p {
-    margin-top: 32px;
+  .page main {
+    justify-content: center;
   }
+
 }
 
 .link-container {
 
-  margin: 32px 0;
+  
   display: flex;
   justify-content: space-between;
   justify-content: center;
@@ -89,6 +95,7 @@ ul {
 
 @keyframes fadeIn {
   from {
+    margin: 0;
     opacity: 0;
     max-height: 0;
   }
@@ -96,6 +103,7 @@ ul {
   to {
     opacity: 1;
     max-height: 100px;
+    margin: 32px 0;
   }
 }
 
